# thotp

./: CHANGELOG.md  Cargo.toml  README.md  qr.html  temp_secret
src/: custom.rs  encoding.rs  lib.rs  otp_core.rs  qr.rs
